--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "build": "tsup src --out-dir build"
   },
   "dependencies": {
-    "fastify": "4.28.1"
+    "dotenv": "16.4.5",
+    "fastify": "4.28.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.14.10",
