--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "20.14.10",
+    "eslint": "8.57.0",
     "tsup": "8.1.0",
     "tsx": "4.16.2",
     "typescript": "5.5.3"
