--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   },
   "dependencies": {
     "@prisma/client": "5.17.0",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "fastify": "4.28.1",
     "zod": "3.23.8"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
+    "@types/bcryptjs": "2.4.6",
     "@types/node": "20.14.10",
     "eslint": "8.57.0",
     "prisma": "5.17.0",
