--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "start": "node build/server.js",
     "build": "tsup src --out-dir build",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@prisma/client": "5.17.0",
+    "@vitest/coverage-v8": "2.0.5",
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "fastify": "4.28.1",
