--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "@prisma/client": "5.17.0",
-    "@vitest/coverage-v8": "2.0.5",
     "bcryptjs": "2.4.3",
     "dotenv": "16.4.5",
     "fastify": "4.28.1",
@@ -19,12 +19,14 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.14.10",
+    "@vitest/coverage-v8": "2.0.5",
+    "@vitest/ui": "2.0.5",
     "eslint": "8.57.0",
     "prisma": "5.17.0",
     "tsup": "8.1.0",
     "tsx": "4.16.2",
     "typescript": "5.5.3",
     "vite-tsconfig-paths": "4.3.2",
-    "vitest": "2.0.4"
+    "vitest": "2.0.5"
   }
 }
