--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "start:dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
     "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
-    "test:install-prisma-environment":"npm link vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
@@ -19,16 +20,19 @@
     "dayjs": "1.11.12",
     "dotenv": "16.4.5",
     "fastify": "4.28.1",
+    "npm-run-all": "4.1.5",
     "zod": "3.23.8"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "20.14.10",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "2.0.5",
     "@vitest/ui": "2.0.5",
     "eslint": "8.57.0",
     "prisma": "5.17.0",
+    "supertest": "7.0.0",
     "tsup": "8.1.0",
     "tsx": "4.16.2",
     "typescript": "5.5.3",
