--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -5,17 +5,16 @@ on: [pull_request]
 jobs:
   run-e2e-tests:
     name: Run E2E Tests
-
     runs-on: ubuntu-latest
 
     services:
       postgres:
-        image: postgres
+        image: bitnami/postgresql
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: root
+          POSTGRESQL_USERNAME: root
+          POSTGRESQL_PASSWORD: root
           POSTGRESQL_DATABASE: apisolid
 
     steps:
@@ -27,6 +26,7 @@ jobs:
           cache: 'npm'
 
       - run: npm ci
+
       - run: npm run test:e2e
         env:
           JWT_SECRET: testing-secret
