--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -9,7 +9,7 @@ jobs:
 
     services:
       postgres:
-        image: bitnami/postgresql
+        image: postgres
         ports:
           - 5432:5432
         env:
