--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -13,8 +13,8 @@ jobs:
         ports:
           - 5432:5432
         env:
-          POSTGRESQL_USER: root
-          POSTGRESQL_PASSWORD: root
+          POSTGRES_USER: root
+          POSTGRES_PASSWORD: root
           POSTGRESQL_DATABASE: apisolid
 
     steps:
