--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -15,7 +15,7 @@ jobs:
         env:
           POSTGRES_USER: root
           POSTGRES_PASSWORD: root
-          POSTGRESQL_DATABASE: apisolid
+          POSTGRESQL_DATABASE: mydb
 
     steps:
       - uses: actions/checkout@v3
