seia la to cansado ja

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,4 @@ services:
     environment:
       - POSTGRES_USER=root 
       - POSTGRES_PASSWORD=root
-      - POSTGRESQL_DB=mydb
+      - POSTGRES_DB=mydb
