--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -31,3 +31,5 @@ jobs:
         env:
           JWT_SECRET: testing-secret
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
+      - run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}"
