--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -30,3 +30,5 @@ jobs:
         env:
           JWT_SECRET: testing-secret
           DATABASE_URL: 'postgresql://root:root@localhost:5432/mydb?schema=public'
+
+      - run: echo ${{ secrets.DATABASE_URL }}
