--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -26,7 +26,7 @@ jobs:
           cache: 'npm'
 
       - run: npm ci
-      - run: echo ${{ secrets.DATABASE_URL }}
+      - run: echo "${{ secrets.DATABASE_URL }}"
 
       - run: npm run test:e2e
         env:
