--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -37,4 +37,4 @@ jobs:
           POSTGRES_HOST: postgres
           JWT_SECRET: testing-secret
           POSTGRES_PORT: 5432
-          DATABASE_URL: 'postgresql://root:root@localhost:5432/mydb?schema=public'
+          DATABASE_URL: postgresql://root:root@localhost:5432/mydb?schema=public
