--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -9,12 +9,12 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: bitnami/postgresql
         ports:
           - 5432:5432
         env:
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: root
+          POSTGRESQL_USERNAME: docker
+          POSTGRESQL_PASSWORD: docker
           POSTGRESQL_DATABASE: apisolid
 
     steps:
@@ -29,4 +29,4 @@ jobs:
       - run: npm run test:e2e
         env:
           JWT_SECRET: testing-secret
-          DATABASE_URL: 'postgresql://root:root@localhost:5432/mydb?schema=public'
+          DATABASE_URL: 'postgresql://docker:docker@localhost:5432/apisolid?schema=public'
