--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3'
 
 services: 
-  pg:
-    image: postgres
+  api-solid-pg:
+    image: bitnami/postgresql
     ports: 
       - 5432:5432
     environment:
-      - POSTGRES_USER=root 
-      - POSTGRES_PASSWORD=root
+      - POSTGRESQL_USER=docker 
+      - POSTGRESQL_PASSWORD=docker
       - POSTGRESQL_DATABASE=apisolid
